thou shall not use old stuff like bgcolor but use css

--- a/latexq0.html
+++ b/latexq0.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Latex Query 0</title>
+      <title>Latex Query</title>
+	<style>
+		body {
+			background-color:#800000;
+			color:white;
+		}
    </head>
-   <body bgcolor="#800000" text="FFFFFF">
+   <body>
       LaTeX Maker
       <br>
       <br>
