--- a/latexq0.html
+++ b/latexq0.html
@@ -44,7 +44,7 @@
                <option>CSE (Council of Science Editors)</option>-->
          </select>
          Starter Text: <br>
-         <textarea rows="20" name="starter" cols="100">
+         <textarea rows="20" name="starterText" cols="100">
 Enter abstract/introduction/etc. here...
 </textarea>
          <br><br>
