--- a/latexq0.html
+++ b/latexq0.html
@@ -3,14 +3,13 @@
    <head>
       <title>Latex Query</title>
 	<style>
-		body {
-			background-color:#800000;
-			color:white;
-		}
-	</style>	
+		
+	</style>
+	<link href="css/main.css" rel="stylesheet" type="text/css">
    </head>
    <body>
-      LaTeX Maker
+   	<h1><span class="tex">T<sub>e</sub>X</span>
+<span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> Labob</h1>
       <br>
       <br>
       <br>
