added landscape question, remove automatic error detection question

--- a/latexq0.html
+++ b/latexq0.html
@@ -57,8 +57,8 @@ Here goes your essay/paper.
          <input type="radio" name="function" value="pdf"> Typeset PDF
 	 <input type="radio" name="function" value="webpage"> Webpage (hosted on marge)
          <br><br>
-         <input type="checkbox" name="errorcorrect" value="yes" checked="checked">
-         Attempt automatic error corrections? (Uncheck to preserve text completely)
+         <input type="checkbox" name="landscape" value="True" checked="checked">
+         Format in landscape orientation?
          <br><br>
          <input type="submit" name="submit" value="Submit">
       </form>
