css resets and fixes

--- a/latexq0.html
+++ b/latexq0.html
@@ -26,15 +26,15 @@
          </select>
          <br><br>
          <table border="1">
-            <th>Your Name: <input type="text" name="authname" value="First(s) Last"></th><br>Mutltiple names will not work for MLA.<br><br>
-            <td>Your Professor's Last Name <input type="text" name="Plname" value="" placeholder="Dr. Brooks"></td><br><br>
-            <td>Class Name: <input type="text" name="Classname" value="" placeholder="Calculus 101"></input></td>
-            
-            <br><br>
-            <tr>
-               <td>Title: <input type="text" name="title" size=50 value="Analysis of Reports">
+            <th>Your Name: <input type="text" name="authname" value="First(s) Last"></th><br>Multiple names will not work for MLA.<br><br>
+            <tr><td><br>Your Professor's Last Name <input type="text" name="Plname" value="" placeholder="Dr. Brooks"><br><br>
+             Title: <input type="text" name="title" size=50 value="Analysis of Reports">
                   <br><br>
-                  Date: (can be left empty) <input type="text" name="date">
+                  Date: (can be left empty) <input type="text" name="date"><br><br>
+                    Class Name: <input type="text" name="Classname" value="" placeholder="Calculus 101"></input><br><br>
+           Affliation: <input type="checkbox" name="AffiliationCHOOSER" value="True" checked="checked"><input type="text" name="Affiliation" value="" placeholder="Sponser or University"></input>
+            </td>
+             </tr>  
          </table>
          <br><br>
          Choose "starter" (multiple OK): 
