added privacy and policy pages
added a nice modern format for both and added simple warrant canary. I also fixed the links on the latexq0.html page to reflect these new links and will begin working on the processor.py code.

--- a/latexq0.html
+++ b/latexq0.html
@@ -80,9 +80,9 @@ Here goes your essay/paper.
          <input type="submit" name="submit" value="Submit">
       </form>
        <br>
-       <a href="https://github.com/jonw27/labob/LICENSE">License</a>
-       <a href="PrivacyPolicy.txt">Privacy Policy w/ Warrant Canary</a>
-       <a href="about.txt">About this project</a>
+       <a href="https://raw.githubusercontent.com/JonW27/labob/master/LICENSE">License</a>
+       <a href="privacy.html">Privacy Policy w/ Warrant Canary</a>
+       <a href="about.html">About this project</a>
        </div>
    </body>
 </html>
