got rid of starter and fixed a typo, made starter abstract

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <br><br>
                   Date: (can be left empty) <input type="text" name="date"><br><br>
                     Class Name: <input type="text" name="Classname" value="" placeholder="Calculus 101"></input><br><br>
-           Affliation: <input type="checkbox" name="AffiliationCHOOSER" value="True" checked="checked"><input type="text" name="Affiliation" value="" placeholder="Sponser or University"></input>
+           Affliation: <input type="checkbox" name="AffiliationCHOOSER" value="True" checked="checked"><input type="text" name="Affiliation" value="" placeholder="Sponsor or University"></input>
             </td>
              </tr>  
          </table>
@@ -42,13 +42,12 @@
             <option value=0 selected>None</option>
             <option>Abstract</option>
             <option>Introduction</option>
-            <option>Starter</option>
             <!--
                <option>Turabian</option>
                <option>CSE (Council of Science Editors)</option>-->
          </select>
-         Starter Text: <br>
-         <textarea rows="20" name="starterText" cols="100">
+         Abstract (only for APA): <br>
+         <textarea rows="20" name="Abstract" cols="100">
 Enter abstract/introduction/etc. here...
 </textarea>
          <br><br>
