Abstract field in HTML

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
             </td>
              </tr>  
          </table>
-         <br><br>
+         <br><br><!--
          Choose "starter" (multiple OK): 
          <select name="starter" multiple>
             <option value=0 selected>None</option>
             <option>Abstract</option>
             <option>Introduction</option>
-            <!--
+            
                <option>Turabian</option>
-               <option>CSE (Council of Science Editors)</option>-->
-         </select>
-         Abstract (only for APA): <br>
+               <option>CSE (Council of Science Editors)</option>
+         </select> -->
+         Abstract (Use only for APA formatting; ignored in others): <br>
          <textarea rows="20" name="Abstract" cols="100">
 Enter abstract/introduction/etc. here...
 </textarea>
