More Abstract changes
Made all placeholder text values as placeholders that disappear when
custom text is entered.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
          </select>
          <br><br>
          <table border="1">
-            <th>Your Name: <input type="text" name="authname" value="First(s) Last"></th><br>Multiple names will not work for MLA.<br><br>
+            <th>Your Name: <input type="text" name="authname" placeholder="First(s) Last"></th><br>Multiple names will not work for MLA.<br><br>
             <tr><td><br>Your Professor's Last Name <input type="text" name="Plname" value="" placeholder="Dr. Brooks"><br><br>
-             Title: <input type="text" name="title" size=50 value="Analysis of Reports">
+             Title: <input type="text" name="title" size=50 placeholder="Analysis of Reports">
                   <br><br>
                   Date: (can be left empty) <input type="text" name="date"><br><br>
                     Class Name: <input type="text" name="Classname" value="" placeholder="Calculus 101"></input><br><br>
@@ -47,13 +47,11 @@
                <option>CSE (Council of Science Editors)</option>
          </select> -->
          Abstract (Use only for APA formatting; ignored in others): <br>
-         <textarea rows="20" name="Abstract" cols="100">
-Enter abstract/introduction/etc. here...
+         <textarea rows="10" name="Abstract" cols="100" placeholder="Enter abstract here..."></textarea>
 </textarea>
          <br><br>
          Body Text: <br>
-         <textarea rows="100" name="body" cols="100">
-Here goes your essay/paper.
+         <textarea rows="100" name="body" cols="100" placeholder="Here goes your essay/paper."></textarea>
 </textarea>
          <br><br>
          I want: 
