--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             <option>Turabian (Standard)</option>
 			<option>Turabian (Research Paper)</option>
 			<option>Turabian (Thesis or Dissertation)</option>
-			<option value="" disabled selected style="font-style: italic;">Note: Turabian is a predecessor to Chicago format.</option>
+			<option value="" disabled id="spec"><i>Note: Turabian is a predecessor to Chicago format.</i></option>
             <!--<option>CSE (Council of Science Editors)</option>
 			Unfortunately, there is no style guide in CTAN or around the web for CSE formatting with LaTeX.-->
          </select>
+          <br><br>
+        Pick font size (leave empty to use default autofont setting): <input type="number" name="fSize">
          <br><br>
          <table border="1">
             <th>Your Name: <input type="text" name="authname" placeholder="First(s) Last"></th><br>Multiple names will not work for MLA.<br><br>
