--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                <option>Turabian</option>
                <option>CSE (Council of Science Editors)</option>
          </select> -->
+         Keywords (Use only for APA formatting; ignored in others): <br>
+         <textarea rows="10" name="Keywords" cols="1" placeholder="Biology, synergy, mitochondira..."></textarea>
+</textarea>
+         <br><br>
          Abstract (Use only for APA formatting; ignored in others): <br>
          <textarea rows="10" name="Abstract" cols="100" placeholder="Enter abstract here..."></textarea>
 </textarea>
