Uncapitalized in order to avoid throwing pdflatex error
Avoids throwing pdflatex error, and after that pdflatex works perfectly with the latest generated tex code.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          <br><br>
          Choose paper size:
          <select name="paperStyle">
-            <option selected value="letterPaper">US Letter</option>
+            <option selected value="letterpaper">US Letter</option>
             <option value="a4">a4</option>
             <option value="a5">a5</option>
          </select>
