--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <br>
       <br>
        <div id="body">
-      <form method="POST" action="YOURTEXCODE.py">
+      <form method="POST" action="processor.py">
          Choose typesetting format: 
          <select name="format" size="1">
             <option selected value="Standard">Standard</option>
