Font size and Turabian
The font size value can now be empty. Turabian (Standard) now works as
expected.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <option selected value="Standard">Standard</option>
             <option value="MLA">MLA 7 (Modern Language Association 7th Edition)</option>
             <option value="APA">APA 6 (American Psychological Association 6th Edition)</option>
-            <option>Turabian (Standard)</option>
+            <option value="Turabian (Standard)">Turabian (Standard)</option>
 		<option value="Turabian (Research Paper)">Turabian (Research Paper)</option>
 		<option value="Turabian (Thesis or Dissertation)">Turabian (Thesis or Dissertation)</option>
 		<option value="" disabled id="spec"><i>Note: Turabian is a predecessor to Chicago format.</i></option>
