fixed up an error

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 </textarea>
          <br><br>
          Body Text: <br>
-         <textarea rows="100" name="body" cols="100" placeholder="Here goes your essay/paper.
+         <textarea rows="100" name="body" cols="100" placeholder="Here goes your essay/paper.">
 		 
-		 Bill says "This is a test"></textarea>
+		 Bill says "This is a test"</textarea>
 </textarea>
          <br><br>
          I want: 
