added syntax, html generation should work
html generation should work w/ MathType Syntax

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                <option>Turabian</option>
                <option>CSE (Council of Science Editors)</option>
          </select> -->
-         Keywords: <i>for APA format only</i><br>
+         Keywords <i>for APA format only</i>:<br>
          <textarea rows="1" name="Keywords" cols="100" placeholder="Biology, synergy, mitochondria..."></textarea>
 </textarea>
          <br><br>
@@ -65,7 +65,7 @@
          <textarea rows="10" name="Abstract" cols="100" placeholder="Enter abstract here..."></textarea>
 </textarea>
          <br><br>
-         Body Text: <br>
+         Body Text (For HTML format your equations using <a href="mathtype.html">MathType</a>): <br>
          <textarea rows="100" name="body" cols="100" placeholder="Here goes your essay/paper.">
 		 
 		 Bill says "This is a test"</textarea>
