--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 			Unfortunately, there is no style guide in CTAN or around the web for CSE formatting with LaTeX.-->
          </select>
           <br><br>
-       
+		  <b>Fun Example:</b> Try leaving the fields in Basic Information, Abstract, and Body Text empty to have a reserved example generated.
+       <br><br>
          <table border="1">
             <th>Basic Information:</th>
             <tr><td style="white-space: nowrap;"><br>Your Name: <input type="text" name="authname" placeholder="First(s) Last"></th><br><i>For MLA formatting, separate your first and last name with a space.</i><br><br>
