--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,12 @@
             <p>
                 As of May 30th, 2016 we have not received any requests to hand over any data or information. We do not intend to store your data in any way for any marketing use whatsoever, but reserve the right to gather information for research and analytical purposes to make our own project better. By using this service, you consent to this, and waive your right to sue us or cause us mental or physical harm or damage. As per our license, you may fork or create a copyleft clone as you see fit, if you do not want to partake in any of our research that we may conduct whether it be in the future or now.
             </p>
+            <p>As per the GNU General Public Licence,</p>
+            <h3>&nbsp;&nbsp;Disclaimer of Warranty</h3>
+            <p>THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.</p>
+            <h3>&nbsp;&nbsp;Limitation of Liability</h3>
+            <p>IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MODIFIES AND/OR CONVEYS THE PROGRAM AS PERMITTED ABOVE, BE LIABLE TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE THE PROGRAM (INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR DATA BEING RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A FAILURE OF THE PROGRAM TO OPERATE WITH ANY OTHER PROGRAMS), EVEN IF SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.</p>
+            <p>More information, including the interpretation of the sections above, is available at the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">Full License</a>.</p>
         </div>
     </body>
 </html>
