added support links

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
        <br><br>
        <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License</a>
        <a href="privacy.html">Privacy Policy w/ Warrant Canary</a>
+       <a href="https://www.gitbook.com/book/jonw27/latex-labob">Docs</a>
+       <a href="https://github.com/Jonw27/labob">Source Code</a>
        <a href="about.html">About this project</a>
        </div>
    </body>
